<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/music_about_layout"
        android:background="@color/dark_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@color/category_darker"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/song_name_info_text_view"
                    style="@style/SongNameStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/category_lighter"
                    android:gravity="center"
                    android:paddingBottom="6dp"
                    android:text="@string/song_name_title" />

                <TextView
                    android:id="@+id/song_artist_info_text_view"
                    style="@style/SongArtistStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_sample" />

                <TextView
                    android:id="@+id/song_date_info_text_view"
                    style="@style/SongArtistStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_sample" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="150dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@color/category_darker"
                android:orientation="vertical">

                <TextView
                    style="@style/SongNameStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/category_lighter"
                    android:gravity="center"
                    android:paddingBottom="6dp"
                    android:text="@string/description_title" />

                <ScrollView
                    android:id="@+id/SCROLLER_ID"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true"
                    android:scrollbars="vertical">

                    <TextView
                        android:id="@+id/description_tv"
                        style="@style/SongArtistStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="6dp"
                        android:scrollbars="vertical"
                        android:text="@string/sample_description" />
                </ScrollView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/song_artist_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/list"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/dark_background"
                android:orientation="vertical">

            </ListView>

            <ListView
                android:id="@+id/list2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/dark_background"
                android:orientation="vertical">

            </ListView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/music_about_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/play_image_view"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/category_lighter"
            android:padding="16dp"
            android:src="@drawable/play_button" />

        <TextView
            android:id="@+id/song_name_playing_tv"
            style="@style/SongPlayingStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/category_darker"
            android:text="@string/music_playing"
            android:textAlignment="center"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/info_song_playing_iv"
            style="@style/SongPlayingStyle"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/category_lighter"
            android:padding="8dp"
            android:src="@drawable/details_image"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>